Fix card overflow in phones

--- a/index.css
+++ b/index.css
@@ -251,8 +251,6 @@ html
 #contact
 {
     grid-area: contact;
-
-
 }
 
 #education
@@ -277,7 +275,6 @@ html
     text-align: center;
     padding-top: 5rem;
     padding-bottom: 1rem;
-    font-size: 0.3rem;
     color: rgb(146, 146, 146);
 }
 
@@ -294,5 +291,10 @@ html
             "contact"
             "education"
             "skills";
+    }
+
+    #contact-education-skills > div
+    {
+        padding: 2rem;
     }
 }
